<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GetstartedActivity">

    <View
        android:id="@+id/getimage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/getstartedact"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="264dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/mregular"
        android:text="@string/welcome"
        android:textColor="#FFF"
        android:textSize="38sp"
        app:layout_constraintBottom_toTopOf="@+id/btnsignin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.261"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04" />

    <Button
        android:id="@+id/btnsignin"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="520dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="3dp"
        android:background="@drawable/bg_btn_getstarted"
        android:fontFamily="@font/mmedium"
        android:text="@string/signin"
        android:textColor="#FFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btnsignup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnsignup"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="36dp"
        android:background="@drawable/bg_btn_white"
        android:fontFamily="@font/mlight"
        android:text="@string/signup"
        android:textColor="@color/textgray"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnsignin"
        app:layout_constraintVertical_bias="0.163" />

</android.support.constraint.ConstraintLayout>