<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_gradient_primary"
    tools:context=".SignInActv">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="160dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:fontFamily="@font/mregular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.117" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/bg_layout_white"
        android:orientation="vertical"
        android:paddingTop="30dp"
        android:paddingBottom="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <LinearLayout
            android:layout_marginBottom="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:orientation="vertical">

            <TextView
                android:layout_marginBottom="12dp"
                android:textColor="@color/textgray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mlight"
                android:text="@string/username"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/xusername"
                android:inputType="text"
                android:fontFamily="@font/mmedium"
                android:textColor="@color/blackPrimary"
                android:lines="1"
                android:paddingLeft="12dp"
                android:background="@drawable/bg_input_edit"
                android:layout_width="match_parent"
                android:layout_height="50dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginBottom="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:orientation="vertical">

            <TextView
                android:layout_marginBottom="12dp"
                android:textColor="@color/textgray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mlight"
                android:text="@string/password"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/xpassword"
                android:inputType="textPassword"
                android:fontFamily="@font/mmedium"
                android:textColor="@color/blackPrimary"
                android:lines="1"
                android:paddingLeft="12dp"
                android:background="@drawable/bg_input_edit"
                android:layout_width="match_parent"
                android:layout_height="50dp" />
        </LinearLayout>

        <Button
            android:id="@+id/btnsignin"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:background="@drawable/bg_btn_getstarted"
            android:fontFamily="@font/mmedium"
            android:text="@string/signin"
            android:textColor="#FFF"
            android:textSize="20sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/btn_new_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/mlight"
        android:text="Create New Account"
        android:textColor="#FFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />



</android.support.constraint.ConstraintLayout>