<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_white_primary"
    tools:context=".RegisterOneActv">


    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="310dp"
        android:background="@drawable/bg_gradient_primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/mregular"
        android:text="Create New Account"
        android:textAlignment="center"
        android:textColor="#FFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/mlight"
        android:lineSpacingExtra="9dp"
        android:text="Please fill up the form \n bellow for informations"
        android:textAlignment="center"
        android:textColor="#FFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/bg_layout_white"
        android:orientation="vertical"
        android:paddingTop="30dp"
        android:paddingBottom="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="24dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:fontFamily="@font/mlight"
                android:text="@string/username"
                android:textColor="@color/textgray"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/bg_input_edit"
                android:fontFamily="@font/mmedium"
                android:inputType="text"
                android:lines="1"
                android:paddingLeft="12dp"
                android:textColor="@color/blackPrimary" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="24dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:fontFamily="@font/mlight"
                android:text="@string/password"
                android:textColor="@color/textgray"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/bg_input_edit"
                android:fontFamily="@font/mmedium"
                android:inputType="textPassword"
                android:lines="1"
                android:paddingLeft="12dp"
                android:textColor="@color/blackPrimary" />
        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:fontFamily="@font/mlight"
                android:text="@string/email"
                android:textColor="@color/textgray"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/bg_input_edit"
                android:fontFamily="@font/mmedium"
                android:inputType="textEmailAddress"
                android:lines="1"
                android:paddingLeft="12dp"
                android:textColor="@color/blackPrimary" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btncontinue"
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/bg_btn_getstarted"
        android:fontFamily="@font/mmedium"
        android:text="@string/conti"
        android:textColor="#FFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <LinearLayout
        android:id="@+id/btn_back"
        android:layout_width="90dp"
        android:layout_height="55dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/bg_layout_white"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@+id/btncontinue"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <ImageView
            android:layout_width="36dp"
            android:layout_height="32dp"
            android:src="@drawable/ic_back" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>